# kayak

./: CMakeLists.txt  License.txt  README.md
embedded-sw/: kayak-hardware_1.0_password.rar
platform/: CMakeLists.txt
platform/engine/: CMakeLists.txt  caninbox.cpp  caninbox.h  canmessage.cpp  canmessage.h  canoutbox.cpp  canoutbox.h  dispatcher.h  engine.cpp  engine.h  kayakengine.cpp  kayakengine.h  logger.cpp  logger.h  messagecontroller.cpp  messagecontroller.h  usbadapter.cpp  usbadapter.h  usbcontroller.cpp  usbcontroller.h  usbserialreader.cpp  usbserialreader.h  usbserialwriter.cpp  usbserialwriter.h
platform/engine/protocol/: ackcmdmessage.cpp  ackcmdmessage.h  message.cpp  message.h  messagefactory.cpp  messagefactory.h  reqcmdmessage.cpp  reqcmdmessage.h  router.cpp  router.h
platform/gui/: CMakeLists.txt  canframegeneratorwidget.cpp  canframegeneratorwidget.h  canframegeneratorwidget.ui  canlogform.cpp  canlogform.h  canlogform.ui  configform.cpp  configform.h  configform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
platform/plugins/: CMakeLists.txt
